WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95873
IndexedDB: Large integer versions not persisted correctly
https://bugs.webkit.org/show_bug.cgi?id=95873
Summary
IndexedDB: Large integer versions not persisted correctly
Joshua Bell
Reported
2012-09-05 10:54:42 PDT
IndexedDB: Large integer versions not persisted correctly
Attachments
Patch
(3.84 KB, patch)
2012-09-05 10:55 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Patch
(8.82 KB, patch)
2012-09-05 11:11 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-09-05 10:55:00 PDT
Created
attachment 162287
[details]
Patch
Joshua Bell
Comment 2
2012-09-05 10:58:32 PDT
The database integer version is inconsistently stored/read as an Int vs. VarInt, which shows up when integer versions > 127 are used: transaction->put(intVersionKey, encodeVarInt(IDBDatabaseMetadata::DefaultIntVersion)); -- ok = getInt(m_db.get(), DatabaseMetaDataKey::encode(foundId, DatabaseMetaDataKey::UserIntVersion), foundIntVersion); -- if (!putVarInt(m_db.get(), DatabaseMetaDataKey::encode(rowId, DatabaseMetaDataKey::UserIntVersion), intVersion)) -- if (!putVarInt(m_currentTransaction.get(), DatabaseMetaDataKey::encode(rowId, DatabaseMetaDataKey::UserIntVersion), intVersion)) The getInt call needs to be a getVarInt.
Joshua Bell
Comment 3
2012-09-05 11:11:05 PDT
Created
attachment 162292
[details]
Patch
Joshua Bell
Comment 4
2012-09-05 11:11:26 PDT
dgrogan@ - please take a look
David Grogan
Comment 5
2012-09-05 11:23:11 PDT
Comment on
attachment 162292
[details]
Patch LGTM
Joshua Bell
Comment 6
2012-09-05 11:24:01 PDT
Comment on
attachment 162292
[details]
Patch tony@ - r? cq?
WebKit Review Bot
Comment 7
2012-09-05 20:53:44 PDT
Comment on
attachment 162292
[details]
Patch Clearing flags on attachment: 162292 Committed
r127685
: <
http://trac.webkit.org/changeset/127685
>
WebKit Review Bot
Comment 8
2012-09-05 20:53:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug