IndexedDB: Large integer versions not persisted correctly https://bugs.webkit.org/show_bug.cgi?id=95873

Reviewed by Tony Chang.

Source/WebCore:

Correctly encode AND decode integer versions numbers as VarInts.

Test: storage/indexeddb/intversion-encoding.html

* Modules/indexeddb/IDBLevelDBBackingStore.cpp:
(WebCore::getVarInt):
(WebCore):
(WebCore::IDBLevelDBBackingStore::getIDBDatabaseMetaData):

LayoutTests:

Verify large integer versions that encode differently as Ints vs. VarInts.

* storage/indexeddb/intversion-encoding-expected.txt: Added.
* storage/indexeddb/intversion-encoding.html: Added.
* storage/indexeddb/resources/intversion-encoding.js: Added.
(test):
(openFirstTime.request.onupgradeneeded):
(openFirstTime.request.onsuccess):
(openFirstTime):
(openSecondTime.request.onsuccess):
(openSecondTime):


Canonical link: https://commits.webkit.org/113787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127685 268f45cc-cd09-0410-ab3c-d52691b4dbfc